whitespace fix

--- a/www/assets/css/_input.scss
+++ b/www/assets/css/_input.scss
@@ -34,6 +34,7 @@ body {
   label {
       width: 100%;
       text-align: left;
+      white-space: nowrap;
   }
 }
 
